force-app/main/default/objects/SEG_ExcepcionesCentro__c/SEG_ExcepcionesCentro__c.object-meta.xml
<CustomObject>
    <description>Junction object con plantillas (NO excepciones) de SEGMENTOS.</description>
    <label>Plantilla Centro</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID Excepciones Centro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plantillas Centro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>