force-app/main/default/objects/SEG_ExcepcionesCentro__c/fields/SEG_CentroEmpresa__c.field-meta.xml
<CustomField>
    <fullName>SEG_CentroEmpresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro Empresa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>SEG_CentroEmpresa</relationshipName>
    <type>Lookup</type>
</CustomField>